Padding bottom on #gridpak to ensure the footer clears on small screens

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -469,7 +469,7 @@ footer {
     height:570px;
     clear:both;
     background:url(../images/site/icons/ruler.png) no-repeat 0 585px;
-    padding:30px 0;
+    padding:30px 0 90px;
 }
 
 	/* @group 6.1. BROWSER
